@@ -1,3 +1,4 @@
+    2020/08/06: Fixed witches not registered when handle_schematics is not loaded! D'oh!
     2020/08/01: Witches have two new wands from Damon and Simone!
     2020/07/31: Witches can turn aggressive mobs into sheep! Witches gain drench spell!
     2020/07/28: Witches will teleport you away from themselves if you are aggressive!
